# camel_web_app

./: .env.example  .gitignore  CAMEL_Web_App Draft_PRD.markdown  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/components/: Todo.tsx
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: tools.py
backend/app/: crud.py  worker.py
backend/app/api/: camel_agent.py  main.py
backend/app/api/routes/: agent.py  approval.py  camel.py  rag.py  (+7 more)
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  approval.py  chat.py  human.py  rag.py  settings.py  token.py  users.py  workflow.py
backend/app/tests/: conftest.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: AIPlayground.css  AIPlayground.tsx  App.tsx  index.css  routeTree.gen.ts
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/components/: app-sidebar.tsx  nav-main.tsx
frontend/src/routes/: login.tsx  signup.tsx
frontend/src/services/: toolService.ts
frontend/src/ui/: AIPlayground.tsx  canvas.css
frontend/tests/: auth.setup.ts  camel.spec.ts  home.spec.ts
web_app_ui_by_xinyu/: package-lock.json  package.json
web_app_ui_by_xinyu/src/: AIPlayground.css  AIPlayground.jsx  App.js
web_app_ui_by_xinyu_vite/: package-lock.json  package.json
web_app_ui_by_xinyu_vite/src/: AIPlayground.css  AIPlayground.tsx  App.tsx  Canvas.tsx  index.css
web_app_ui_by_zhijian/: package-lock.json  package.json
web_app_ui_by_zhijian/src/: App.tsx  index.tsx
(+49 files in other folders)
